ipc/ipdl/test/ipdl/error/ExtendedAttrUnknown.ipdlh
//error: unknown attribute `InvalidAttribute'

[InvalidAttribute] using SomeType from "SomeFile.h";

struct ExtendedAttrUnknown {};
